# MiniCLIP

./: .gitignore  FineTuneBERT (1).ipynb  main.py  pyproject.toml
data/augmented_no/: metadata.csv
data/final_dataset/: metadata.csv  problematic_captions.csv
data/final_dataset_noaug/: metadata.csv
data/flicker/: captions.csv
data/flicker/__MACOSX/: ._flickr_subset2
data/flicker/captions/: ball_050.txt  ball_053.txt  ball_088.txt  ball_105.txt  ball_112.txt  ball_124.txt  ball_147.txt  ball_149.txt  bike_052.txt  bike_070.txt  bike_084.txt  bike_087.txt  bike_126.txt
data/flicker/flickr_long_subset/: captions.csv
data/flickr_long_subset/captions/: ball_009.txt  ball_010.txt  ball_018.txt  ball_023.txt  ball_042.txt  ball_046.txt  ball_048.txt  ball_061.txt  ball_065.txt  ball_067.txt  ball_072.txt  ball_076.txt  ball_079.txt  ball_082.txt  ball_092.txt  ball_094.txt  ball_104.txt  ball_106.txt  ball_107.txt  ball_110.txt  ball_141.txt  ball_174.txt  ball_177.txt  ball_191.txt  ball_192.txt  ball_199.txt  ball_202.txt  ball_211.txt  ball_214.txt  ball_216.txt  ball_220.txt  ball_233.txt  ball_236.txt  ball_241.txt  ball_246.txt  ball_249.txt  ball_253.txt  ball_254.txt  ball_265.txt  (+364 more)
notebooks/: 11_Observations.ipynb  11_Prepare_Dataset.ipynb  CLIPmodel.ipynb  augmentation.ipynb  clip_model.ipynb  data_analysis.ipynb  dataset.ipynb  smallBERT.ipynb  small_bert.ipynb  text_classification.ipynb
notebooks_final/: 11_Contrastive_Model.ipynb  11_Contrastive_Model_Hybrid.ipynb  11_Observations.ipynb  11_Textual_Classifier.ipynb  11_Visual_Classifier.ipynb
(+3821 files in other folders)
